--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             strSubSectionName = '';
     </script>
 
-<iframe id="appPlayer" src="https://d21u3ic0kp9e91.cloudfront.net/elasticman/0/index.html" ></iframe>
+<iframe id="appPlayer" src="face.html" ></iframe>
 
 </div>
 <script type="text/javascript">
