--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     $(document).ready(function(){
         $("body").css("overflow-y","hidden");   
         $("#down-arrow").show();
-        window.addEventListener( 'resize', onWindowResize, false );
+        window.addEventListener( 'resize', onWindowResize, true );
         
         doIframeResize();
     
